# aac_irish

./: Cargo.toml  README.md
aac/: README.md
src/: lib.rs  main.rs
src/scripts/: genitive_parser.rs  mod.rs
src/services/: mod.rs  root_service.rs  text_correction_service.rs  voice_service.rs
src/utils/: string_utils.rs
